--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Currículum</title>
-    <link rel="stylesheet" href="enlace.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <h1>currículum vitae de atanagildo aguirre pacheco</h1>
@@ -42,5 +42,13 @@
             </p>
         </section>
     </main>
+    <hr>
+    <section>
+        <address>
+            <p>Autor: Atanagildo Aguirre Pacheco<br>
+            Última modificación de esta página: 14 de Octubre de 2016</p>
+
+        </address>
+    </section>
 </body>
 </html>
